Data Viz Blog Post (updated)

--- a/astro/src/content/blog/data-viz.mdx
+++ b/astro/src/content/blog/data-viz.mdx
@@ -1,6 +1,8 @@
 ---
 title: "D3 from CDN in Astro MDX"
+description: "Load D3 from a CDN in an Astro MDX post and render a small time-series chart."
 pubDate: 2025-09-17
+tags: ["d3", "astro", "mdx", "data-viz"]
 ---
 
 # D3 Visualization in Astro with CDN
