--- a/astro/src/content/blog/data-viz.mdx
+++ b/astro/src/content/blog/data-viz.mdx
@@ -10,7 +10,6 @@ tags: ["d3", "astro", "mdx", "data-viz"]
 Here’s a small chart built with **D3.js loaded from a CDN**:
 
 <div id="chart"></div>
-
 <script src="https://cdn.jsdelivr.net/npm/d3@7" defer></script>
 
 <script
@@ -20,47 +19,26 @@ Here’s a small chart built with **D3.js loaded from a CDN**:
         const data = [
           { date: new Date("2025-01-01"), value: 10 },
           { date: new Date("2025-01-02"), value: 15 },
-          { date: new Date("2025-01-03"), value: 9 },
-          { date: new Date("2025-01-04"), value: 18 },
-          { date: new Date("2025-01-05"), value: 12 }
+          { date: new Date("2025-01-03"), value: 9 }
         ];
 
-                const width = 500, height = 250, m = {t:20, r:20, b:30, l:40};
+                const width = 500, height = 250, m = {t:20,r:20,b:30,l:40};
                 const w = width - m.l - m.r, h = height - m.t - m.b;
 
-                const svg = d3.select("#chart")
-                  .append("svg")
+                const svg = d3.select("#chart").append("svg")
                   .attr("viewBox", \`0 0 \${width} \${height}\`)
                   .append("g")
                   .attr("transform", \`translate(\${m.l},\${m.t})\`);
 
-                const x = d3.scaleUtc()
-                  .domain(d3.extent(data, d => d.date))
-                  .range([0, w]);
+                const x = d3.scaleUtc().domain(d3.extent(data, d => d.date)).range([0, w]);
+                const y = d3.scaleLinear().domain([0, d3.max(data, d => d.value)]).nice().range([h, 0]);
 
-                const y = d3.scaleLinear()
-                  .domain([0, d3.max(data, d => d.value)])
-                  .nice()
-                  .range([h, 0]);
+                svg.append("g").attr("transform", \`translate(0,\${h})\`).call(d3.axisBottom(x));
+                svg.append("g").call(d3.axisLeft(y));
 
-                svg.append("g")
-                  .attr("transform", \`translate(0,\${h})\`)
-                  .call(d3.axisBottom(x));
+                const line = d3.line().x(d => x(d.date)).y(d => y(d.value)).curve(d3.curveMonotoneX);
 
-                svg.append("g")
-                  .call(d3.axisLeft(y));
-
-                const line = d3.line()
-                  .x(d => x(d.date))
-                  .y(d => y(d.value))
-                  .curve(d3.curveMonotoneX);
-
-                svg.append("path")
-                  .datum(data)
-                  .attr("fill", "none")
-                  .attr("stroke", "steelblue")
-                  .attr("stroke-width", 2)
-                  .attr("d", line);
+                svg.append("path").datum(data).attr("fill","none").attr("stroke","steelblue").attr("stroke-width",2).attr("d", line);
               });
 `
     }}
@@ -70,3 +48,4 @@ Here’s a small chart built with **D3.js loaded from a CDN**:
     #chart { max-width: 100%; margin: 1rem 0; }
     svg { width: 100%; height: auto; }
 </style>
+
