--- a/astro/src/content/blog/data-viz.mdx
+++ b/astro/src/content/blog/data-viz.mdx
@@ -9,4 +9,8 @@ tags: ["d3", "astro", "mdx", "data-viz"]
 
 Here’s a small chart built with **D3.js loaded from a CDN**:
 
+<div id="chart"></div>
+<script src="https://cdn.jsdelivr.net/npm/d3@7" defer></script>
+
+
 
